Exam 1 expansion rework complete, updating 2d math help

--- a/explanations-math.html
+++ b/explanations-math.html
@@ -276,7 +276,8 @@
                                 <p><strong>D.</strong> If \(m\) is less than 2, then \(n\) is greater than 1</p>
                             </div>
 
-                            <p class="mb-2 mt-4"><strong>Step 1: Solve for variable on left hand side of equation,
+                            <p class="mb-2 mt-4"><strong>Step 1: Solve for one varialbe and put it on the left hand side
+                                    of equation, here we'll use
                                     \(m\)</strong></p>
                             <p class="mb-2">Add 5 to both sides:</p>
                             <p class="mb-3 text-center">\[2m = 4n + 8\]</p>
@@ -290,15 +291,8 @@
                                 <li>When \(n = 1\): \(m = 2(1) + 4 = 6\), so the point is \((1, 6)\)</li>
                             </ul>
 
-                            <p class="mb-2"><strong>Step 3: Draw the Graph</strong></p>
-                            <p class="mb-2">Use the left hand side variable as the y axis and the right hand side
-                                variable as the x axis.</p>
-                            <div class="mb-3 text-center">
-                                <img src="assets/images/2d-graph-1.png" alt="Graph showing the line m = 2n + 4"
-                                    class="img-fluid" style="max-width: 60%; height: auto;">
-                            </div>
 
-                            <p class="mb-2"><strong>Step 4: Graph the line</strong></p>
+                            <p class="mb-2"><strong>Step 3: Graph the line</strong></p>
                             <ul>
                                 <li>Plot the two points we calculated: (0, 4) and (1, 6). I like to use a table off to
                                     the side to write them down.</li>
@@ -309,7 +303,7 @@
                                     class="img-fluid" style="max-width: 60%; height: auto;">
                             </div>
 
-                            <p class="mb-2"><strong>Step 5: Test each answer choice</strong></p>
+                            <p class="mb-2"><strong>Step 4: Test each answer choice</strong></p>
                             <p class="mb-2">Which of the following statements is true?</p>
                             <div class="mb-2">
                                 <p><strong>A.</strong> If \(n\) is greater than 1, then \(m\) is greater than 8</p>
@@ -334,6 +328,117 @@
                             </div>
                             <p class="mt-3"><strong>Answer:</strong> Only B is true. We can either plug in numbers to
                                 test, or look at the graph. It's a good idea to do both if time permits.</p>
+
+                            <h5 class="mt-4">Alternative Method: Test Each Answer Choice Directly</h5>
+
+                            <p class="mb-2">
+                                Another reliable way to solve these problems is to <strong>look at one answer choice at
+                                    a
+                                    time</strong> and
+                                <strong>plug in numbers</strong> that match what the statement says.
+                            </p>
+
+                            <p class="mb-2">
+                                This works especially well because our equation is <strong>linear</strong>.
+                            </p>
+
+                            <p class="mb-2">
+                                A <strong>linear equation</strong> is an equation where the graph is a <strong>straight
+                                    line</strong>. You can spot a linear equation if there are no exponents, square
+                                roots, variables multiplied by themselves (same thing as an exponent) or variables in
+                                the denominator of a fraction.
+                                Straight lines do not curve or turn back — once they go up or down, they keep going in
+                                that
+                                direction.
+                                Because of this, if a statement works for a couple of test values, it will keep working.
+                            </p>
+
+                            <p class="mb-3">
+                                Our equation is:
+                            </p>
+                            <p class="mb-3 text-center">
+                                \[m = 2n + 4\]
+                            </p>
+
+                            <p class="mb-3">
+                                We will now test <strong>each answer choice</strong> by choosing values that match the
+                                condition.
+                            </p>
+
+                            <hr>
+
+                            <p class="mb-2"><strong>Answer Choice A:</strong> If \(n\) is greater than 1, then \(m\) is
+                                greater than 8</p>
+
+                            <ul>
+                                <li>Try a value just greater than 1: let \(n = 2\)</li>
+                                <li>\(m = 2(2) + 4 = 8\)</li>
+                                <li>\(m\) is <strong>not greater than 8</strong>, so this already fails</li>
+                                <li>Try a larger value: \(n = 3 \Rightarrow m = 10\)</li>
+                            </ul>
+
+                            <p class="text-muted ms-3">
+                                Since the statement fails at \(n = 2\), it is <strong>false</strong>.
+                            </p>
+
+                            <hr>
+
+                            <p class="mb-2"><strong>Answer Choice B:</strong> If \(n\) is less than 0, then \(m\) is
+                                less
+                                than 4</p>
+
+                            <ul>
+                                <li>Try \(n = -1\)</li>
+                                <li>\(m = 2(-1) + 4 = 2\), which is less than 4</li>
+                                <li>Try a smaller value: \(n = -2\)</li>
+                                <li>\(m = 2(-2) + 4 = 0\), still less than 4</li>
+                            </ul>
+
+                            <p class="text-muted ms-3">
+                                Since this works for multiple values and the equation is linear, this statement is
+                                <strong>true</strong>.
+                            </p>
+
+                            <hr>
+
+                            <p class="mb-2"><strong>Answer Choice C:</strong> If \(m\) is greater than 10, then \(n\) is
+                                negative</p>
+
+                            <ul>
+                                <li>Pick a value greater than 10: let \(m = 12\)</li>
+                                <li>Solve for \(n\): \(12 = 2n + 4 \Rightarrow 2n = 8 \Rightarrow n = 4\)</li>
+                                <li>\(n\) is positive, not negative</li>
+                            </ul>
+
+                            <p class="text-muted ms-3">
+                                This contradicts the statement, so it is <strong>false</strong>.
+                            </p>
+
+                            <hr>
+
+                            <p class="mb-2"><strong>Answer Choice D:</strong> If \(m\) is less than 2, then \(n\) is
+                                greater
+                                than 1</p>
+
+                            <ul>
+                                <li>Try \(m = 1\)</li>
+                                <li>\(1 = 2n + 4 \Rightarrow 2n = -3 \Rightarrow n = -1.5\)</li>
+                                <li>\(n\) is not greater than 1</li>
+                                <li>Try an even smaller value: \(m = 0 \Rightarrow n = -2\)</li>
+                            </ul>
+
+                            <p class="text-muted ms-3">
+                                Since the condition fails, this statement is <strong>false</strong>.
+                            </p>
+
+                            <hr>
+
+                            <p class="mt-3">
+                                <strong>Final Conclusion:</strong> Because the equation is linear and only answer choice
+                                B
+                                works for all valid test
+                                values, <strong>B is the correct answer</strong>.
+                            </p>
                         </div>
                     </div>
 
