--- a/full-practice_1.html
+++ b/full-practice_1.html
@@ -521,7 +521,8 @@
                                 <p class="fw-bold">18. Given the formula</p>
                                 <p class="mb-2" style="font-size: 1.5em; text-align: center;">\[p = \frac{m \cdot n}{m +
                                     k}\]</p>
-                                <p class="mb-2">where \(k\) is held constant, as \(m\) changes, what happens to \(p\)?
+                                <p class="mb-2">where \(k\) and \(n\) are held constant, as \(m\) changes, what happens
+                                    to \(p\)?
                                 </p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="m18" id="m18a" value="A">
@@ -541,9 +542,9 @@
                             </div>
 
                             <!-- Question 19: Variable relationship -->
-                            <div class="question mb-4" data-question="m19" data-correct="C">
+                            <div class="question mb-4" data-question="m19" data-correct="A">
                                 <p class="fw-bold">19. Given the formula</p>
-                                <p class="mb-2" style="font-size: 1.5em; text-align: center;">\[u = \frac{\sqrt{v}}{v +
+                                <p class="mb-2" style="font-size: 1.5em; text-align: center;">\[u = \frac{v^2}{v +
                                     w}\]</p>
                                 <p class="mb-2">where \(w\) is held constant, as \(v\) increases, what happens to \(u\)?
                                 </p>
@@ -562,11 +563,7 @@
                                     <label class="form-check-label" for="m19c">C. As \(v\) increases, \(u\)
                                         decreases</label>
                                 </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="m19" id="m19d" value="D">
-                                    <label class="form-check-label" for="m19d">D. As \(v\) decreases, \(u\)
-                                        decreases</label>
-                                </div>
+
                             </div>
 
                             <h6 class="mt-5 mb-3">2D Graphing and Inequalities</h6>
@@ -2272,16 +2269,16 @@
             m8: "Substitute \\(t = 12\\) and \\(k = 3\\) into \\(e = \\frac{\\sqrt{3t}}{k/2}\\): \\(e = \\frac{\\sqrt{3(12)}}{3/2} = \\frac{\\sqrt{36}}{1.5} = \\frac{6}{1.5} = 4\\).",
             m9: "Substitute \\(n = 10\\) and \\(p = 3\\) into \\(m = \\frac{3(n-2)}{4p}\\): \\(m = \\frac{3(10-2)}{4(3)} = \\frac{3(8)}{12} = \\frac{24}{12} = 2\\).",
             m10: "Substitute \\(j = 9\\) into \\(i = \\frac{5j}{3}\\): \\(i = \\frac{5(9)}{3} = \\frac{45}{3} = 15\\).",
-            m11: "Substitute \\(v = 2\\) and \\(w = 4\\) into \\(u = \\frac{2v^3}{5w/2}\\): \\(u = \\frac{2(2^3)}{5(4)/2} = \\frac{2(8)}{20/2} = \\frac{16}{10} = 1.6\\).",
+            m11: "Substitute \\(v = 2\\) and \\(w = 4\\) into \\(u = \\frac{2v^3}{5w/2}\\): \\(u = \\frac{2(2^3)}{5(4)/2} = \\frac{2(8)}{20/2} = \\frac{16}{10} = 1.6\\). <br> Note: To divide or multiply any number by 10, move the decimal point one place left or right respectively- to the left for division and to the right for multiplication.",
             m12: "Substitute \\(f = 8\\) and \\(d = 2\\) into \\(g = \\frac{\\sqrt{f \\times f}}{d}\\): \\(g = \\frac{\\sqrt{8 \\times 8}}{2} = \\frac{\\sqrt{64}}{2} = \\frac{8}{2} = 4\\).",
-            m13: "Substitute \\(t = 5\\), \\(k = 2\\), and \\(w = 4\\) into \\(e = \\frac{4(t+1)}{3k+w}\\): \\(e = \\frac{4(5+1)}{3(2)+4} = \\frac{4(6)}{6+4} = \\frac{24}{10} = 2.4\\).",
+            m13: "Substitute \\(t = 5\\), \\(k = 2\\), and \\(w = 4\\) into \\(e = \\frac{4(t+1)}{3k+w}\\): \\(e = \\frac{4(5+1)}{3(2)+4} = \\frac{4(6)}{6+4} = \\frac{24}{10} = 2.4\\). <br> Note: To divide or multiply any number by 10, move the decimal point one place left or right respectively.",
             m14: "Substitute \\(n = 7\\), \\(p = 2\\), and \\(q = 2\\) into \\(m = \\frac{6n}{2p+q}\\): \\(m = \\frac{6(7)}{2(2)+2} = \\frac{42}{4+2} = \\frac{42}{6} = 7\\).",
-            m15: "Substitute \\(j = 4\\) and \\(k = 2\\) into \\(i = \\frac{3j-6}{2j+k}\\): \\(i = \\frac{3(4)-6}{2(4)+2} = \\frac{12-6}{8+2} = \\frac{6}{10} = 0.6\\).",
+            m15: "Substitute \\(j = 4\\) and \\(k = 2\\) into \\(i = \\frac{3j-6}{2j+k}\\): \\(i = \\frac{3(4)-6}{2(4)+2} = \\frac{12-6}{8+2} = \\frac{6}{10} = 0.6\\). <br> Note: To divide or multiply any number by 10, move the decimal point one place left or right respectively.",
             // Math Section: Variable Relationships (Questions m16-m19)
             m16: "Start with \\(y = \\frac{z - x}{z} + 5\\) and pick \\(x = 10\\) to make it concrete: \\(y = \\frac{z - 10}{z} + 5\\). Using the algebra rule \\(\\frac{a - b}{c} = \\frac{a}{c} - \\frac{b}{c}\\), split the fraction: \\(\\frac{z - 10}{z} = \\frac{z}{z} - \\frac{10}{z}\\). So \\(y = \\frac{z}{z} - \\frac{10}{z} + 5\\). Simplify \\(\\frac{z}{z} = 1\\) to get \\(y = 1 - \\frac{10}{z} + 5\\). Combine like terms \\(1 + 5 = 6\\) to obtain \\(y = 6 - \\frac{10}{z}\\). As \\(z\\) increases, \\(\\frac{10}{z}\\) decreases, so subtracting a smaller number from 6 makes \\(y\\) increase. Therefore, as \\(z\\) increases, \\(y\\) increases. Statement A is true. Here is a 3D graph of the problem with x set to 10: <br><img src=\"assets/images/exam1-graph16.png\" alt=\"Graph for question 16\" style=\"max-width: 50%; margin-top: 10px;\">",
             m17: "Let \\(c = 10\\). The equation becomes \\(b = \\frac{12}{\\sqrt{10}}(a - 3)\\). Since \\(\\frac{12}{\\sqrt{10}}\\) is a positive constant, \\(b\\) increases whenever \\(a - 3\\) increases. Therefore, as \\(a\\) increases, \\(b\\) increases.",
             m18: "Let \\(n = 10\\) and \\(k = 10\\). The equation becomes \\(p = 10 \\cdot \\frac{m}{m + 10}\\). As \\(m\\) increases, the fraction \\(\\frac{m}{m + 10}\\) increases. Therefore, \\(p\\) increases as \\(m\\) increases.",
-            m19: "Let \\(w = 10\\). The equation becomes \\(u = \\frac{\\sqrt{v}}{v + 10}\\). As \\(v\\) increases, the numerator \\(\\sqrt{v}\\) increases slowly while the denominator \\(v + 10\\) increases faster. Because the denominator grows faster, the value of the fraction decreases. Therefore, as \\(v\\) increases, \\(u\\) decreases.",
+            m19: "Let \\(w = 10\\). The equation becomes \\(u = \\frac{v^2}{v + 10}\\). Choose two values of \\(v\\): when \\(v = 2\\), \\(u = \\frac{2^2}{2 + 10} = \\frac{4}{12} = \\frac{1}{3}\\). When \\(v = 5\\), \\(u = \\frac{5^2}{5 + 10} = \\frac{25}{15} = \\frac{5}{3}\\). Since \\(v\\) increased from 2 to 5 and \\(u\\) increased from \\(\\frac{1}{3}\\) to \\(\\frac{5}{3}\\), \\(u\\) increases as \\(v\\) increases. Therefore, statement A is true.",
 
 
 
