Updated explanations pages

--- a/explanations-math.html
+++ b/explanations-math.html
@@ -534,11 +534,16 @@
                             <ul>
                                 <li><strong>Be familiar with types of graphs:</strong> Linear graphs are straight lines
                                     (equations like \(y = mx + b\)). Quadratic graphs are curved (equations with \(x^2\)
-                                    terms). <strong>It's only a curved line in a graph if there is an exponent or square
-                                        root!</strong></li>
+                                    terms). <strong>If there is a curved line, it is 'non-linear.' That means there is
+                                        an exponent, square
+                                        root, a variable times itself (same thing as an exponent), or a variable in the
+                                        denominator of a fraction!</strong></li>
                                 <li>Write out statements into formulas accurately. Read carefully: "y is x times itself"
                                     means \(y = x^2\), not \(y = 2x\).</li>
-                                <li>Plot 3 points from tables and connect them. If the line curves, it's non-linear.
+                                <li>Plot 3 points to visualize the table or equation. If the line curves, it's
+                                    non-linear.
+                                    <strong>Since the graph may be non-linear (curved), it is important to check 3
+                                        points rather than 2!</strong>
                                 </li>
                                 <li>A systematic way to solve: Find three points from the given representation
                                     (statement, table, graph, or function) and check to see if they all exist on each
@@ -591,8 +596,10 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <p class="text-muted ms-3">Test: Our point \((0, 2)\) should have \(y = 1\) in this
-                                    table, but it doesn't. <strong>Incorrect.</strong></p>
+                                <p class="text-muted ms-3">Test: Our point \((0, 2)\) means that when \(x = 0\), \(y =
+                                    2\). This table should have \(y = 2\) when \(x = 0\), but it doesn't.
+                                    <strong>Incorrect.</strong>
+                                </p>
                             </div>
 
                             <div class="mb-3">
